# gtest_cmake_codecov_ci_skeleton

./: .gitignore  .travis.yml  CMakeLists.txt  Findgtest.cmake  README.md
include/: celestiale.h
src/: CMakeLists.txt  celestiale.cpp  celestiale_main.cpp
tests/: CMakeLists.txt  test.cpp
